character images + static frontend + everything

--- a/static/index.html
+++ b/static/index.html
@@ -1,9 +1,101 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Brickflow deploy service</title>
+  <title>Brickflow Deploy Service</title>
+  <link rel="stylesheet" type="text/css" href="/style/main.css" />
 </head>
 <body>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="/client/client.js"></script>
+  <h1 class="title">Brickflow Deploy Service</h1>
+  <div class="instanceWrapper">
+    <div class="instanceName">
+      Goro
+    </div>
+    <div class="instanceImage goro"></div>
+    <div class="button">Restart</div>
+    <div class="button" onclick="execute('goro','deploy')">Deploy</div>
+  </div>
 
+  <div class="instanceWrapper">
+    <div class="instanceName">
+      Sonya-blade
+    </div>
+    <div class="instanceImage sonya-blade"></div>
+    <div class="button">Restart</div>
+    <div class="button">Deploy</div>
+  </div>
+
+  <div class="instanceWrapper">
+    <div class="instanceName">
+    Sub-Zero
+    </div>
+    <div class="instanceImage sub-zero"></div>
+    <div class="button">Restart</div>
+    <div class="button">Deploy</div>
+  </div>
+
+  <div class="instanceWrapper">
+    <div class="instanceName">
+    Raiden
+    </div>
+    <div class="instanceImage raiden"></div>
+    <div class="button">Restart</div>
+    <div class="button">Deploy</div>
+  </div>
+
+  <div class="instanceWrapper">
+    <div class="instanceName">
+    Kitana
+    </div>
+    <div class="instanceImage kitana"></div>
+    <div class="button">Restart</div>
+    <div class="button">Deploy</div>
+  </div>
+
+  <div class="instanceWrapper">
+    <div class="instanceName">
+    Cyrax
+    </div>
+    <div class="instanceImage cyrax"></div>
+    <div class="button">Restart</div>
+    <div class="button">Deploy</div>
+  </div>
+
+  <div class="instanceWrapper">
+    <div class="instanceName">
+    Kano 1
+    </div>
+    <div class="instanceImage kano"></div>
+    <div class="button">Restart</div>
+    <div class="button">Deploy</div>
+  </div>
+
+  <div class="instanceWrapper">
+    <div class="instanceName">
+    Kano 2
+    </div>
+    <div class="instanceImage kano"></div>
+    <div class="button">Restart</div>
+    <div class="button">Deploy</div>
+  </div>
+
+  <div class="instanceWrapper">
+    <div class="instanceName">
+    Kano 3
+    </div>
+    <div class="instanceImage kano"></div>
+    <div class="button">Restart</div>
+    <div class="button">Deploy</div>
+  </div>
+
+  <div class="instanceWrapper">
+    <div class="instanceName">
+    Kano 4
+    </div>
+    <div class="instanceImage kano"></div>
+    <div class="button">Restart</div>
+    <div class="button">Deploy</div>
+  </div>
 </body>
 </html>
