requiring deploy scripts are now automatic with reading the deployScripts directory. also renamed the directory client to js

--- a/static/index.html
+++ b/static/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-  <script src="/client/client.js"></script>
+  <script src="/js/client.js"></script>
   <h1 class="title">Brickflow Deploy Service</h1>
   <div class="instanceWrapper">
     <div class="instanceName">
